--- a/TeamBesterestGame/TeamBesterestGame.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.csproj
@@ -344,6 +344,7 @@
     <Compile Include="Assets\Scripts\Workethic Scripts\OverAchiever.cs" />
     <Compile Include="Assets\Scripts\Workethic Scripts\Studious.cs" />
     <Compile Include="Assets\Scripts\Workethic Scripts\TeamPlayer.cs" />
+    <Compile Include="Assets\UIManager.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\_ArrayPoolDefault.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\_ArrayPoolLEngineDefault.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\_ArrayPoolSpatialAudio.cs" />
