--- a/TeamBesterestGame/TeamBesterestGame.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.csproj
@@ -194,6 +194,12 @@
     <Reference Include="UnityEngine.WindModule">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.WindModule.dll</HintPath>
     </Reference>
+    <Reference Include="Vuforia.UnityExtensions.Editor">
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/VuforiaSupport/Managed/Editor/Vuforia.UnityExtensions.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Vuforia.UnityExtensions">
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/VuforiaSupport/Managed/Runtime/Vuforia.UnityExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -254,41 +260,73 @@
     <Reference Include="UnityEditor.Graphs">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.Android.Extensions">
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/AndroidPlayer/UnityEditor.Android.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions">
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.LinuxStandalone.Extensions">
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/LinuxStandaloneSupport/UnityEditor.LinuxStandalone.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.OSXStandalone.Extensions">
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/MacStandaloneSupport/UnityEditor.OSXStandalone.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>C:/Program Files (x86)/Microsoft Visual Studio Tools for Unity/15.0/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Advertisements">
-      <HintPath>C:/Users/Nate/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.3/UnityEngine.Advertisements.dll</HintPath>
+      <HintPath>C:/Users/a_cor/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.3/UnityEngine.Advertisements.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Advertisements">
-      <HintPath>C:/Users/Nate/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.3/Editor/UnityEditor.Advertisements.dll</HintPath>
+      <HintPath>C:/Users/a_cor/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.3/Editor/UnityEditor.Advertisements.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Analytics">
-      <HintPath>C:/Users/Nate/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/UnityEngine.Analytics.dll</HintPath>
+      <HintPath>C:/Users/a_cor/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/UnityEngine.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Analytics">
-      <HintPath>C:/Users/Nate/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/Editor/UnityEditor.Analytics.dll</HintPath>
+      <HintPath>C:/Users/a_cor/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.13/Editor/UnityEditor.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Purchasing">
-      <HintPath>C:/Users/Nate/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/UnityEngine.Purchasing.dll</HintPath>
+      <HintPath>C:/Users/a_cor/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Purchasing">
-      <HintPath>C:/Users/Nate/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/Editor/UnityEditor.Purchasing.dll</HintPath>
+      <HintPath>C:/Users/a_cor/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.purchasing@0.0.19/Editor/UnityEditor.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.StandardEvents">
-      <HintPath>C:/Users/Nate/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/a_cor/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Common">
+      <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport\UnityEditor.iOS.Extensions.Common.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\CameraControls.cs" />
     <Compile Include="Assets\Scripts\ConstructionScript.cs" />
     <Compile Include="Assets\Scripts\CSVImporter.cs" />
+    <Compile Include="Assets\Scripts\Defunct\CowardlyTrait.cs" />
+    <Compile Include="Assets\Scripts\Defunct\FancyTrait.cs" />
+    <Compile Include="Assets\Scripts\Defunct\FlirtyTrait.cs" />
+    <Compile Include="Assets\Scripts\Defunct\GrossTrait.cs" />
+    <Compile Include="Assets\Scripts\Defunct\GuardianTrait.cs" />
     <Compile Include="Assets\Scripts\Defunct\InterviewButtonScript.cs" />
+    <Compile Include="Assets\Scripts\Defunct\PersonalityTags.cs" />
+    <Compile Include="Assets\Scripts\Defunct\PersonalityTrait.cs" />
+    <Compile Include="Assets\Scripts\Defunct\PridefulTrait.cs" />
+    <Compile Include="Assets\Scripts\Defunct\RecklessTrait.cs" />
     <Compile Include="Assets\Scripts\Defunct\ResumeScript.cs" />
+    <Compile Include="Assets\Scripts\Defunct\SlackerTrait.cs" />
     <Compile Include="Assets\Scripts\Defunct\SpawnNewSquare.cs" />
+    <Compile Include="Assets\Scripts\Defunct\TraitBase.cs" />
+    <Compile Include="Assets\Scripts\Defunct\TyrantTrait.cs" />
+    <Compile Include="Assets\Scripts\Defunct\WaryTrait.cs" />
+    <Compile Include="Assets\Scripts\Defunct\WorkaholicTrait.cs" />
     <Compile Include="Assets\Scripts\DoorScript.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Hero Scripts\BaseHero.cs" />
@@ -323,20 +361,13 @@
     <Compile Include="Assets\Scripts\Room Scripts\DefaultRoom.cs" />
     <Compile Include="Assets\Scripts\Room Scripts\EntranceRoom.cs" />
     <Compile Include="Assets\Scripts\Room Scripts\MergedRoom.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\CowardlyTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\FancyTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\FlirtyTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\GrossTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\GuardianTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\PersonalityTags.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\PersonalityTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\PridefulTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\RecklessTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\SlackerTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\TraitBase.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\TyrantTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\WaryTrait.cs" />
-    <Compile Include="Assets\Scripts\Trait Scripts\WorkaholicTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\BaseTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\DeathCurse.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\HeavySleeper.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\Hoarder.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\Investor.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\MoneyMonger.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\ToughSkinned.cs" />
     <Compile Include="Assets\Scripts\UIManager.cs" />
     <Compile Include="Assets\Scripts\Workethic Scripts\BaseEthic.cs" />
     <Compile Include="Assets\Scripts\Workethic Scripts\BrownNoser.cs" />
