Properly moved stuff

--- a/TeamBesterestGame/TeamBesterestGame.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.csproj
@@ -327,6 +327,18 @@
     <Compile Include="Assets\Scripts\Defunct\TyrantTrait.cs" />
     <Compile Include="Assets\Scripts\Defunct\WaryTrait.cs" />
     <Compile Include="Assets\Scripts\Defunct\WorkaholicTrait.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\BaseEthic.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\BrownNoserDeprecated.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\ChatterBox.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\Compliant.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\Focused.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\Frugal.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\Kleptomaniac.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\Leader.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\Mentor.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\OverAchiever.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\Studious.cs" />
+    <Compile Include="Assets\Scripts\Defunct\Workethic Scripts\TeamPlayer.cs" />
     <Compile Include="Assets\Scripts\DoorScript.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Hero Scripts\BaseHero.cs" />
@@ -362,25 +374,24 @@
     <Compile Include="Assets\Scripts\Room Scripts\EntranceRoom.cs" />
     <Compile Include="Assets\Scripts\Room Scripts\MergedRoom.cs" />
     <Compile Include="Assets\Scripts\Trait Scripts\BaseTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\Bloodthirsty.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\BodyBuilder.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\BrownNoser.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\Claustrophobic.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\Cliquey.cs" />
     <Compile Include="Assets\Scripts\Trait Scripts\DeathCurse.cs" />
     <Compile Include="Assets\Scripts\Trait Scripts\HeavySleeper.cs" />
     <Compile Include="Assets\Scripts\Trait Scripts\Hoarder.cs" />
     <Compile Include="Assets\Scripts\Trait Scripts\Investor.cs" />
     <Compile Include="Assets\Scripts\Trait Scripts\MoneyMonger.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\Opportunist.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\Predator.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\PriestSchoolDropout.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\Procastinator.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\Reckless.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\RichKid.cs" />
     <Compile Include="Assets\Scripts\Trait Scripts\ToughSkinned.cs" />
     <Compile Include="Assets\Scripts\UIManager.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\BaseEthic.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\BrownNoser.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\ChatterBox.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\Compliant.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\Focused.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\Frugal.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\Kleptomaniac.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\Leader.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\Mentor.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\OverAchiever.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\Studious.cs" />
-    <Compile Include="Assets\Scripts\Workethic Scripts\TeamPlayer.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\_ArrayPoolDefault.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\_ArrayPoolLEngineDefault.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\_ArrayPoolSpatialAudio.cs" />
