Made GameManager ignore the current interview target during interview, so they won't time-out. Added .csproj to GitIgnore.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ TeamBesterestGame/Library/
 TeamBesterestGame/Temp/
 TeamBesterestGame/TeamBesterestGame.userprefs
 TeamBesterestGame/.vs/
+TeamBesterestGame/TeamBesterestGame.csproj
+*.csproj
