--- a/TeamBesterestGame/TeamBesterestGame.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.csproj
@@ -344,8 +344,13 @@
     <Compile Include="Assets\Scripts\Monster Scripts\DragonkinMonster.cs" />
     <Compile Include="Assets\Scripts\Monster Scripts\TribalMonster.cs" />
     <Compile Include="Assets\Scripts\Monster Scripts\UndeadMonster.cs" />
+    <Compile Include="Assets\Scripts\Monster Scripts\UniqueMonster.cs" />
     <Compile Include="Assets\Scripts\Party Scripts\BaseParty.cs" />
     <Compile Include="Assets\Scripts\Party Scripts\TestPart.cs" />
+    <Compile Include="Assets\Scripts\Personalities\Aggressive.cs" />
+    <Compile Include="Assets\Scripts\Personalities\Coward.cs" />
+    <Compile Include="Assets\Scripts\Personalities\Friendly.cs" />
+    <Compile Include="Assets\Scripts\Personalities\Loner.cs" />
     <Compile Include="Assets\Scripts\Room Scripts\BaseRoom.cs" />
     <Compile Include="Assets\Scripts\Room Scripts\CemetaryRoom.cs" />
     <Compile Include="Assets\Scripts\Room Scripts\DefaultRoom.cs" />
