--- a/TeamBesterestGame/TeamBesterestGame.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.csproj
@@ -534,6 +534,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Resources\Yarn Files\Jeff_Dialogue_1.yarn.txt" />
+    <None Include="Assets\Resources\Yarn Files\Nilbog_Dialogue_1.yarn.txt" />
     <None Include="Assets\Scripts\High-Speed-Priority-Queue-for-C-Sharp\LICENSE.txt" />
     <None Include="Assets\Sprites\2D Pixel Top-Down Dungeon Tileset\How to use Tilesets.txt" />
     <None Include="Assets\Sprites\2D Pixel Top-Down Dungeon Tileset\Read_Me.txt" />
