--- a/TeamBesterestGame/TeamBesterestGame.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.csproj
@@ -487,17 +487,12 @@
     <Compile Include="Assets\YarnSpinner\Examples\DemoScripts\SpriteSwitcher.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Resources\Yarn Files\GabbinDialogue.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\JeffDialogue.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\NilbogDialogue.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\geoffBasetxtDialogue.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\goblennBaseNewDialogue.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\pointsStuff\GabbinDialoguePoints.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\pointsStuff\JeffDialoguePoints.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\pointsStuff\NilbogDialoguePointsRevised.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\pointsStuff\file.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\pointsStuff\geoffBasetxtDialoguePointsRevise.yarn.txt" />
-    <None Include="Assets\Resources\Yarn Files\pointsStuff\goblennBaseNewDialoguePointsRevised.yarn.txt" />
+    <None Include="Assets\Resources\Yarn Files\level one\GabbinDialoguePoints.yarn.txt" />
+    <None Include="Assets\Resources\Yarn Files\level one\JeffDialoguePoints.yarn.txt" />
+    <None Include="Assets\Resources\Yarn Files\level one\NilbogDialoguePointsRevised.yarn.txt" />
+    <None Include="Assets\Resources\Yarn Files\level one\file.yarn.txt" />
+    <None Include="Assets\Resources\Yarn Files\level one\geoffBasetxtDialoguePointsRevise.yarn.txt" />
+    <None Include="Assets\Resources\Yarn Files\level one\goblennBaseNewDialoguePointsRevised.yarn.txt" />
     <None Include="Assets\Resources\Yarn Files\test.yarn.txt" />
     <None Include="Assets\Scripts\High-Speed-Priority-Queue-for-C-Sharp\LICENSE.txt" />
     <None Include="Assets\Sprites\2D Pixel Top-Down Dungeon Tileset\How to use Tilesets.txt" />
